--- a/solution/base/deployment.yaml
+++ b/solution/base/deployment.yaml
@@ -1,20 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mywebapp
+  name: vote-app
   namespace: default
 spec:
   replicas: 1
   template:
     spec: # Pod spec
       containers:
-      - name: mycontainer
-        image: "devopsjourney1/mywebapp:latest"
+      - name: vote-app
+        image: kodekloud/examplevotingapp_vote:v1
         ports:
         - containerPort: 80
-        envFrom:
-        - configMapRef:
-            name: mykustom-map
         resources:
           requests:
             memory: "16Mi" 
