--- a/solution/base/service.yaml
+++ b/solution/base/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mywebapp
+  name: vote-service
   namespace: default
 spec:
   ports:
-  - port: 80
-    protocol: TCP
-    name: flask
+  - protocol: TCP
+    port: 80
+    targetPort: 80
   type: LoadBalancer
